fix user dropdown not showing error

--- a/app/assets/stylesheets/new_design/landing.scss
+++ b/app/assets/stylesheets/new_design/landing.scss
@@ -9,7 +9,7 @@
   margin: 0;
   background-color: #fff;
   border-bottom: 2px solid #eee;
-  z-index: 4;
+  z-index: 100;
 
   a:hover,
   a:focus {
